--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kanit|Comfortaa" rel="stylesheet">
     <body>
-        <header>
+        <div class="header">
             <img alt="" class="img-circle" src="avatar.jpg">
             <p class="ism-sharif">Abdulaziz Abduqodirov</p>
             <p class="specialization">Java, Android, Java server-side developer</p>
-        </header>
+        </div>
 
         <div id="soc_links" class="soc-links">
             <a href="https:telegram.me/AAbduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
