--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kanit|Comfortaa" rel="stylesheet">
     <body>
-        <div class="header">
+        <header>
             <img alt="" class="img-circle" src="avatar.jpg">
             <p class="ism-sharif">Abdulaziz Abduqodirov</p>
             <p class="specialization">Java, Android, Java server-side developer</p>
-        </div>
+        </header>
+            
+        <section>
+            <a href="https://telegram.me/AAbduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
+            <a href="https://facebook.com/AAbduqodirov"><img class="soc-link-logo" src="facebook.png"></a>
+            <a href="https://instagram.com/abduqodir0v"><img class="soc-link-logo" src="instagram.png"></a>
+        </section>
 
-        <div id="soc_links" class="soc-links">
-            <a href="https:telegram.me/AAbduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
-        </div>
-
-        <div class="copyright">
+        <footer>
             <p>&copy; Abdulaziz Abduqodirov 2018</p>
-        </div>
+        </footer>
     </body>
 </head>
 </html>
