Added shadow to avatar

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Kanit|Comfortaa" rel="stylesheet">
     <body>
         <header>
-            <img alt="" class="img-circle" src="avatar.jpg">
-            <p class="ism-sharif">Abdulaziz Abduqodirov</p>
-            <p class="specialization">Java, Android, Java server-side developer</p>
+            <img id="avatar-img" alt="" src="avatar.jpg">
+            <p id="fullname">Abdulaziz Abduqodirov</p>
+            <p id="specialization">Java, Android, Java server-side developer</p>
         </header>
             
         <section>
