Added new animations, and menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <img id="avatar-img" alt="" src="avatar.jpg">
             <p id="fullname">Abdulaziz Abduqodirov</p>
-            <p id="specialization">Java, Android, Java server-side developer</p>
+            <p id="specialization">Android developer</p>
         </header>
             
         <section>
@@ -18,7 +18,11 @@
             <a href="https://instagram.com/abduqodir0v"><img class="soc-link-logo" src="instagram.png"></a>
         </section>
 
-        
+        <nav>
+            <a href="blog.html">Blog</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+        </nav>
 
         <footer>
             <p>&copy; Abdulaziz Abduqodirov 2018</p>
