--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             
         <section>
             <a href="https://telegram.me/AAbduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
-            <a href="https://facebook.com/AAbduqodirov"><img class="soc-link-logo" src="facebook.png"></a>
-            <a href="https://instagram.com/abduqodir0v"><img class="soc-link-logo" src="instagram.png"></a>
+            <a href="https://facebook.com/abduqodirov13"><img class="soc-link-logo" src="facebook.png"></a>
+            <a href="https://instagram.com/panda_abdu"><img class="soc-link-logo" src="instagram.png"></a>
         </section>
 
         <nav>
