--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
             
         <section>
-            <a href="https://telegram.me/AAbduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
+            <a href="https://telegram.me/A_Abduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
             <a href="https://facebook.com/abduqodirov13"><img class="soc-link-logo" src="facebook.png"></a>
             <a href="https://instagram.com/panda_abdu"><img class="soc-link-logo" src="instagram.png"></a>
         </section>
