--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </header>
             
         <section>
-            <a href="https://telegram.me/A_Abduqodirov"><img class="soc-link-logo" src="telegram.png"></a>
-            <a href="https://facebook.com/abduqodirov13"><img class="soc-link-logo" src="facebook.png"></a>
-            <a href="https://instagram.com/panda_abdu"><img class="soc-link-logo" src="instagram.png"></a>
+            <a href="https://telegram.me/Abduqodirovcom"><img class="soc-link-logo" src="telegram.png"></a>
+            <a href="https://facebook.com/abduqodirovcom"><img class="soc-link-logo" src="facebook.png"></a>
+            <a href="https://instagram.com/abdu_jdk"><img class="soc-link-logo" src="instagram.png"></a>
         </section>
 
         <nav>
